fix section overlap by removing outdated negative margins and clip-paths

--- a/src/sass/sections/_projects.scss
+++ b/src/sass/sections/_projects.scss
@@ -1,8 +1,8 @@
 #projects {
-  background-color: $bg-color;
+  background-color: $bg-color-alt;
   color: $text-color;
-  margin-top: -10rem;
-  padding-top: 15rem;
+  margin-top: 0;
+  padding-top: 5rem;
 
   @include respond(tab-land) {
     margin-top: 0;
